--- a/src/sass/_final.scss
+++ b/src/sass/_final.scss
@@ -280,10 +280,83 @@
   background-color: var(--card-background);
   overflow: hidden;
   margin-bottom: 30px;
+  position: relative;
 
   @media screen and (min-width: 768px) {
     margin-right: 30px;
   }
+}
+
+.help-modal__open-close-wrap {
+  height: 58px;
+  width: 58px;
+  min-width: 58px;
+  position: absolute;
+  z-index: 2;
+  right: 15px;
+  top: 15px;
+}
+
+.help-modal__open-button {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  color: var(--primary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  z-index: 3;
+  transition: opacity 1s, border 0.35s ease;
+  opacity: 1;
+}
+
+.help-modal__close-button {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  color: var(--primary-color);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  z-index: 3;
+  // transition: opacity 1s, border 0.35s ease;
+  // opacity: 0;
+}
+
+.help-modal__open-button-img {
+  width: 30px;
+  height: 30px;
+  margin: auto;
+  color: var(--primary-color);
+}
+
+.help-modal__close-button-img {
+  width: 30px;
+  height: 30px;
+  margin: auto;
+  color: var(--primary-color);
+  fill: var(--primary-color);
+}
+
+.final__help-modal-wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: var(--card-background);
+  padding: 20px;
+  opacity: 0;
+  height: 100%;
+  width: 100%;
+  font-weight: 100;
+  transition: opacity 0.35s ease;
+  line-height: 1.5;
+  z-index: 1;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .final__summary-weight-head {
@@ -441,7 +514,7 @@
     transition: opacity 0.35s ease;
     z-index: 1;
   }
-  &:hover::after {
+  &::after {
     background-image: linear-gradient(90deg, #ceef31, #91ef31);
     border-radius: 45px;
     position: absolute;
@@ -451,9 +524,12 @@
     height: 100%;
     content: '';
     border-radius: 30px;
-    opacity: 1;
+    opacity: 0;
     transition: opacity 0.35s ease;
     z-index: 2;
+  }
+  &:hover::after {
+    opacity: 1;
   }
 }
 
@@ -499,7 +575,7 @@
   // margin-left: -30px;
   margin-bottom: 20px;
   position: relative;
-  z-index: 2;
+  z-index: 1;
   transform: scale(1.3);
 }
 
@@ -800,5 +876,54 @@
     width: 133.75px;
     height: 133.75px;
     font-size: 32px;
+  }
+}
+
+.final__summary-promises {
+  width: 100%;
+  padding: 30px;
+  margin: 30px auto;
+  background-color: var(--card-background);
+
+  @media screen and (min-width: 768px) {
+    width: 760px;
+    padding: 60px 30px;
+  }
+}
+
+.promise__title {
+  font-size: 34px;
+  font-weight: 700;
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 768px) {
+    font-size: 54px;
+    margin-bottom: 40px;
+  }
+}
+
+.promise__list_item {
+  font-size: 18px;
+  margin-bottom: 20px;
+  line-height: 1.22;
+  display: flex;
+  align-items: center;
+
+  @media screen and (min-width: 768px) {
+    font-size: 24px;
+    margin-bottom: 30px;
+  }
+}
+
+.promise__list-img {
+  width: 24px;
+  height: 24px;
+  margin-right: 15px;
+}
+
+.final__summary-button-wrap--last {
+  @media screen and (min-width: 768px) {
+    width: 760px;
+    max-width: unset;
   }
 }
