--- a/src/sass/quiz/_quiz-progress.scss
+++ b/src/sass/quiz/_quiz-progress.scss
@@ -223,3 +223,104 @@
   pointer-events: none;
   z-index: 6;
 }
+
+.help__modal-wrap {
+  width: 100%;
+  max-width: 560px;
+  border-radius: 46px;
+  background-color: hsla(0, 0%, 100%, 0.95);
+  box-shadow: 0 20px 40px 0 #201d34;
+  max-height: calc(100vh - 30px);
+  position: relative;
+  padding: 30px 30px 60px;
+}
+
+.help__modal-close-wrap {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 58px;
+  height: 58px;
+  opacity: 0.9;
+  border-radius: 50%;
+  overflow: hidden;
+  background-image: linear-gradient(90deg, #636171, #4b495c 97%);
+  box-shadow: 0 20px 30px 0 rgb(47 43 71 / 60%);
+  border: 1px solid #6f6b8d;
+  transition: border 0.35s ease;
+  position: absolute;
+  top: -70px;
+  right: 0;
+
+  @media screen and (min-width: 768px) {
+    top: -58px;
+    right: -58px;
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    background-image: linear-gradient(90deg, #ceef31, #91ef31);
+    transition: opacity 0.35s ease;
+  }
+
+  &:hover::before {
+    opacity: 1;
+  }
+}
+
+.help__modal-close-icon {
+  width: 25px;
+  height: 25px;
+  fill: var(--primary-color);
+  z-index: 1;
+}
+
+.help__modal-icon {
+  fill: var(--primary-color);
+  width: 40px;
+  height: 40px;
+}
+
+.help__modal-icon-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 70px;
+  height: 70px;
+  opacity: 0.9;
+  border: 1px solid;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 35px;
+}
+
+.help__modal-icon-wrap--male {
+  background-image: linear-gradient(90deg, #33f5e0, #5172e8);
+  border-color: #5bd8f0;
+  box-shadow: 0 20px 30px 0 rgb(13 38 102 / 60%);
+}
+
+.help__modal-icon-wrap--female {
+  background-image: linear-gradient(90deg, #f53373, #bf51e8);
+  box-shadow: 0 20px 30px 0 rgb(76 5 45 / 60%);
+  border-color: #ef5eb9;
+}
+
+.help__modal-desc {
+  max-width: 393px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 16px;
+  font-weight: 300;
+  text-align: left;
+  line-height: 1.3;
+  color: #636171;
+}
