--- a/src/sass/_paypage.scss
+++ b/src/sass/_paypage.scss
@@ -57,7 +57,7 @@
   font-size: 26px;
   font-weight: 300;
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 
 .pay__form {
@@ -389,6 +389,12 @@
   text-align: center;
 }
 
+// -----------GET---------------
+
+.get-section {
+  padding-bottom: 50px;
+}
+
 .pay__get-list {
   padding: 0 30px 0 50px;
 }
@@ -416,4 +422,75 @@
 
 .pay__get-list-svg--male {
   fill: #728ded;
+}
+
+// -----------RECIPE---------------
+
+.recipe__section {
+  padding-bottom: 50px;
+}
+
+.recipe__wrap {
+  display: flex;
+  height: 600px;
+  justify-content: center;
+  overflow: hidden;
+  width: 100%;
+  position: relative;
+}
+
+.recipe__mobile {
+  width: 297px;
+  height: 100%;
+  justify-content: center;
+  pointer-events: none;
+  position: absolute;
+  z-index: 2;
+}
+
+.recipe__mobile-content-wrap {
+  background-color: var(--primary-color);
+  border-radius: 20px;
+  height: calc(100% - 30px);
+  overflow-y: scroll;
+  width: 265px;
+  position: relative;
+}
+
+.recipe__mobile-status-bar {
+  align-items: center;
+  background-color: var(--primary-color);
+  display: flex;
+  height: 22px;
+  justify-content: space-between;
+  padding: 0 10px;
+  position: sticky;
+  top: 15px;
+  width: 100%;
+  z-index: 1;
+}
+
+.recipe__mobile-conten-time {
+  color: #333;
+  font-size: 0.8em;
+  padding: 2px 0 0 7px;
+}
+
+.recipe__mobile-conten-status-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.recipe__mobile-conten-status-icon {
+  height: 10px;
+  width: 10px;
+
+  &:not(:last-child) {
+    margin-right: 5px;
+  }
+}
+
+.recipe__mobile-content {
+  width: 265px;
 }
