--- a/src/sass/_paypage.scss
+++ b/src/sass/_paypage.scss
@@ -494,3 +494,106 @@
 .recipe__mobile-content {
   width: 265px;
 }
+
+.slide__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.slide__wrap {
+  width: 340px;
+  height: 100%;
+  background: #12101f;
+  border-radius: 20px;
+  overflow: hidden;
+  position: relative;
+  box-shadow: 0 30px 50px 0 rgb(52 41 29 / 7%);
+}
+
+.slide__result-wrap {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  max-height: 300px;
+}
+
+.slide__result-photo {
+  position: relative;
+  max-width: 50%;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.slide__result-img {
+  position: relative;
+  // width: 100%;
+  height: 100%;
+  // transform: scale(1.1);
+}
+
+.slide__result-desc {
+  position: absolute;
+  bottom: 0;
+  font-size: 18px;
+  font-weight: 700;
+  left: 0;
+  padding: 15px;
+  text-align: center;
+  text-transform: uppercase;
+  width: 100%;
+  color: var(--primary-color);
+  background: #bbb8be;
+  z-index: 1;
+}
+
+.slide__result-desc--female {
+  background: -webkit-linear-gradient(left, #f53373, #bf51e8);
+  opacity: 0.9;
+}
+
+.slide__desc-wrap {
+  padding: 30px;
+  width: 100%;
+}
+
+.slide__desc-icon {
+  display: block;
+  height: 25px;
+  margin: auto;
+  width: 232px;
+}
+
+.slide__desc {
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 10;
+  display: -webkit-box;
+  font-size: 18px;
+  font-stretch: normal;
+  font-style: italic;
+  font-weight: 300;
+  height: 200px;
+  letter-spacing: normal;
+  line-height: 20px;
+  margin: 15px auto 0;
+  max-width: 400px;
+  overflow: hidden;
+  text-align: center;
+  text-overflow: ellipsis;
+}
+
+.slide__desc-author {
+  color: #929093;
+  font-size: 15px;
+  font-stretch: normal;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: normal;
+  line-height: normal;
+  margin-left: auto;
+  margin-top: 30px;
+  max-width: 141px;
+  text-align: right;
+  width: 100%;
+}
