--- a/src/sass/_paypage.scss
+++ b/src/sass/_paypage.scss
@@ -22,6 +22,9 @@
   @media screen and (min-width: 1024px) {
     width: 730px;
   }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
 
 .pay__hero-section {
@@ -58,6 +61,12 @@
   font-weight: 300;
   text-align: center;
   margin-bottom: 50px;
+
+  @media screen and (min-width: 768px) {
+    justify-content: space-between;
+    flex-direction: row;
+    font-size: 48px;
+  }
 }
 
 .pay__form {
@@ -66,6 +75,24 @@
   align-items: center;
   flex-direction: column;
   margin-bottom: 70px;
+
+  // @media screen and (min-width: 1024px) {
+  //   justify-content: space-between;
+  //   flex-direction: row;
+  // }
+}
+
+.pay__form-label-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  @media screen and (min-width: 1200px) {
+    justify-content: space-between;
+    flex-direction: row;
+    margin-bottom: 40px;
+  }
 }
 
 .pay__form-checkbox-label {
@@ -74,6 +101,13 @@
   cursor: pointer;
   position: relative;
   margin-bottom: 40px;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+    &:not(:last-child) {
+      margin-right: 15px;
+    }
+  }
 }
 
 .pay__form-checkbox-wrap {
@@ -395,6 +429,13 @@
   padding-bottom: 50px;
 }
 
+.pay__container--get {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .pay__get-list {
   padding: 0 30px 0 50px;
 }
@@ -437,6 +478,10 @@
   overflow: hidden;
   width: 100%;
   position: relative;
+
+  @media screen and (min-width: 1024px) {
+    display: none;
+  }
 }
 
 .recipe__mobile {
@@ -470,7 +515,7 @@
   z-index: 1;
 }
 
-.recipe__mobile-conten-time {
+.recipe__mobile-content-time {
   color: #333;
   font-size: 0.8em;
   padding: 2px 0 0 7px;
@@ -494,6 +539,48 @@
 .recipe__mobile-content {
   width: 265px;
 }
+
+.recipe__wrap-desktop {
+  // display: flex;
+  height: 500px;
+  justify-content: center;
+  overflow: hidden;
+  width: 880px;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5px 0;
+  display: none;
+
+  @media screen and (min-width: 1024px) {
+    display: flex;
+  }
+}
+
+.recipe__desktop {
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  pointer-events: none;
+  position: absolute;
+  z-index: 2;
+  top: 0;
+}
+
+.recipe__desktop-content-wrap {
+  background-color: var(--primary-color);
+  border-radius: 20px;
+  height: 100%;
+  overflow-y: scroll;
+  width: 675px;
+  position: relative;
+}
+
+.recipe__desktop-content {
+  width: 100%;
+}
+
+// -----------SLIDE---------------
 
 .slide__item {
   display: flex;
