--- a/src/sass/_paypage.scss
+++ b/src/sass/_paypage.scss
@@ -29,14 +29,14 @@
 
 .pay__hero-section {
   position: relative;
-  padding: 200px 0 30px 0;
+  padding: 200px 0 80px 0;
   overflow: hidden;
   background-size: cover;
   background-position: 50%;
 
-  @media screen and (min-width: 768px) {
-    padding: 200px 0 220px;
-  }
+  // @media screen and (min-width: 768px) {
+  //   padding: 200px 0 220px;
+  // }
 }
 
 .pay__hero-container {
