--- a/src/sass/_paypage.scss
+++ b/src/sass/_paypage.scss
@@ -87,6 +87,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  width: 100%;
 
   @media screen and (min-width: 1200px) {
     justify-content: space-between;
@@ -107,6 +108,9 @@
     &:not(:last-child) {
       margin-right: 15px;
     }
+  }
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 30px) / 3);
   }
 }
 
@@ -136,6 +140,10 @@
     border: 2px solid #ef5eb9;
     opacity: 0;
     transition: opacity 0.35s ease;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 25px 25px 25px 75px;
   }
 }
 
